# FrameMover

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hasher.rs  lib.rs  main.rs  mover.rs  scanner.rs  suffix_parser.rs
src-tauri/src/engine/: mod.rs
